adding ualberta logo

--- a/pages/home.html
+++ b/pages/home.html
@@ -60,4 +60,5 @@
         From there you can scroll to the bottom to see the documents we have.
         You can see how our constitution has changed over the years.
     </p>
+    <img src="img/UAlberta.PNG" style="width: 200px;margin-top: 20px;"></img>
 </div>
