adding a map for csc for people to find us, added more information about tutoring

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -35,4 +35,10 @@
             <p class="ada-paragraph center">Tumblr</p>
         </a>
     </div>
+
+    <!-- lol this element makes the stuff below it align properly, I am so sorry-->
+    <div class="ada-link-wrapper left width-100"></div>
+
+    <p class="ada-paragraph left space-above"> Ada's Base is located in the Computing Science Center (CSC) at the Univeristy of Alberta. Here is the interior map:</p>
+    <img src="img/csc.PNG" style="width: 400px;margin-top: 10px;"></img>
 </div>
