--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -21,7 +21,11 @@
     <h1 class="ada-title">Tutoring</h1>
     <p class="ada-paragraph"> Looking for a tutor? Ada’s Team has some members who are willing to help!
         We are committed to providing a safe space for students, so if you have any particular tutoring requirements,
-        send us an email at adasteam@ualberta.ca. We will do our best to accommodate. Volunteer tutors can help you…</p>
+        send us an email at
+        <span class="ada-paragraph">
+            <a href="mailto:adasteam@ualberta.ca">adasteam@ualberta.ca</a>
+        </span>
+        We will do our best to accommodate. Volunteer tutors can help you…</p>
     <ul>
         <li class="ada-list-item">Understand computing related concepts</li>
         <li class="ada-list-item">Develop debugging skills</li>
@@ -34,8 +38,14 @@
         <li class="ada-list-item">It is not reasonable to expect that volunteer tutors will look over your code ahead of their tutoring hour</li>
     </ul>
     <p class="ada-paragraph space">Click on tutoring sessions to see what course(s) help will be provided for.
-        Volunteer tutors provide help in Ada’s Base, CSC 1-24.
-        If you would like to become an Ada's Team tutor send us an email at adasteam@ualberta.ca!</p>
+        Volunteer tutors provide help in
+        <span style="font-weight: bold;"> Ada’s Base, CSC 1-24.</span>
+        There is a map of CSC in the "Contact Us" tab if you do not know where that is!
+        If you would like to become an Ada's Team tutor send us an email at
+        <span class="ada-paragraph">
+            <a href="mailto:adasteam@ualberta.ca">adasteam@ualberta.ca</a>
+        </span>
+    </p>
     <p class="ada-paragraph left space width-100">Volunteer tutoring hours are shown below in
         <span class="ada-paragrph ada-pink">pink.</span>
     </p>
