lol wrong image links

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -40,5 +40,5 @@
     <div class="ada-link-wrapper left width-100"></div>
 
     <p class="ada-paragraph left space-above"> Ada's Base is located in the Computing Science Center (CSC) at the Univeristy of Alberta. Here is the interior map:</p>
-    <img src="img/csc.PNG" style="width: 400px;margin-top: 10px;"></img>
+    <img src="img/csc.png" style="width: 400px;margin-top: 10px;"></img>
 </div>
