--- a/pages/home.html
+++ b/pages/home.html
@@ -42,7 +42,7 @@
     <p class="ada-paragraph">We always need volunteers for fun events/tutoring.
         We have a range of opportunities from teaching high school students,
         tutoring computing science courses and helping us carry over food for events.
-        Please checkout the contact us form if you would like to help!
+        Please email us if you would like to help!
     </p>
     <h5 class="ada-paragraph ada-faq">Do you have to identify as female to be a member or on the executive?</h5>
     <p class="ada-paragraph">Absolutely not! Ada’s Team welcomes any gender and would
@@ -50,8 +50,7 @@
     </p>
     <h5 class="ada-paragraph ada-faq">Where can I go if I have questions about 'insert topic here'?</h5>
     <p class="ada-paragraph">Check out our resources tab if you have any questions about
-        diversity. If you can’t find what you are looking for use the
-        contact us tab and shoot us an email!
+        diversity. If you can’t find what you are looking for send us an email!
     </p>
     <h5 class="ada-paragraph ada-faq">Where can I find the Ada’s Team constitution?</h5>
     <p class="ada-paragraph">Head over to the University of Alberta clubs page called bearsden.
@@ -60,5 +59,5 @@
         From there you can scroll to the bottom to see the documents we have.
         You can see how our constitution has changed over the years.
     </p>
-    <img src="img/UAlberta.png" style="width: 200px;margin-top: 20px;"></img>
+    <img class="extra-space" src="img/UAlberta.png" style="width: 200px;margin-top: 20px;"></img>
 </div>
