--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -40,7 +40,7 @@
     <p class="ada-paragraph space">Click on tutoring sessions to see what course(s) help will be provided for.
         Volunteer tutors provide help in
         <span style="font-weight: bold;"> Ada’s Base, CSC 1-24.</span>
-        There is a map of CSC in the "Contact Us" tab if you do not know where that is!
+        There is a map of CSC in the "Find Us" tab if you do not know where that is!
         If you would like to become an Ada's Team tutor send us an email at
         <span class="ada-paragraph">
             <a href="mailto:adasteam@ualberta.ca">adasteam@ualberta.ca</a>
@@ -51,6 +51,6 @@
     </p>
 
 
-    <iframe class="ada-big-calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0;" width="640" height="600" frameborder="0" scrolling="no"></iframe>
-    <iframe class="ada-small-calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0" width="300" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe class="ada-big-calendar extra-space" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0;" width="640" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe class="ada-small-calendar extra-space" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0" width="300" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
