adding owens suggestion about closing menu

--- a/index.html
+++ b/index.html
@@ -130,46 +130,55 @@
     $('#home').click(function() {
         $('#page-content-wrapper').load('pages/home.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#tutoring').click(function() {
         $('#page-content-wrapper').load('pages/tutoring.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#executives').click(function() {
         $('#page-content-wrapper').load('pages/executives.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#resources').click(function() {
         $('#page-content-wrapper').load('pages/resources.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#scholarships').click(function() {
         $('#page-content-wrapper').load('pages/scholarships.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#find-us').click(function() {
         $('#page-content-wrapper').load('pages/find-us.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#sign-up').click(function() {
         $('#page-content-wrapper').load('pages/sign-up.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#find-us-on').click(function() {
         $('#page-content-wrapper').load('pages/find-us-on.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
 
     $('#blog').click(function() {
         $('#page-content-wrapper').load('pages/blog.html');
         $(window).scrollTop(0);
+        $("#wrapper").toggleClass("toggled");
     });
     </script>
 
