--- a/pages/find-us.html
+++ b/pages/find-us.html
@@ -5,6 +5,5 @@
     </p>
     <br/>
     <p class="ada-paragraph space-above"> Ada's Base is located in the Computing Science Center (CSC) at the Univeristy of Alberta. Here is the interior map:</p>
-    <br/>
-    <img class="extra-space" src="img/csc.png" style="width: 400px;margin-top: 10px;"></img>
+    <img class="extra-space find-us-photo" src="img/csc.png"></img>
 </div>
