--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <h1 class="ada-title">Find Us</h1>
+    <h1 class="ada-title">Contact Us</h1>
     <p class="ada-paragraph left"> E-mail us if you have any questions:
         <a href="mailto:adasteam@ualberta.ca">adasteam@ualberta.ca</a>
     </p>
     <br/>
     <p class="ada-paragraph space-above"> Ada's Base is located in the Computing Science Center (CSC) at the Univeristy of Alberta. Here is the interior map:</p>
-    <img class="extra-space find-us-photo" src="img/csc.png"></img>
+    <img class="extra-space contact-us-photo" src="img/csc.png"></img>
 </div>
