changing fonts and ada name

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
     </p>
     <h3 class="ada-paragraph ada-faq">Here are some Frequently Asked Questions about our group:</h3>
     <h5 class="ada-paragraph ada-faq">Why are we called Ada’s Team?</h5>
-    <p class="ada-paragraph">Ada Lovelace (1815–1852) was a gifted mathematician,
+    <p class="ada-paragraph">Augusta Ada King, Countess of Lovelace (1815–1852) was a gifted mathematician,
         she is considered to have written instructions for the first computer program
         in the mid-1800s and therefore is known as the world’s first computer programmer.
         She originally wrote things that were only on paper but years later her Cambridge
