Refactor: go to page in nav.

--- a/index.html
+++ b/index.html
@@ -134,66 +134,53 @@
     }
 
 
-
     $('#home').click(function() {
-        $('#page-content-wrapper').load('pages/home.html');
-        $(window).scrollTop(0);
+        goToPage('home');
         toggleSideBarOnMobile();
     });
 
     $('#tutoring').click(function() {
-        $('#page-content-wrapper').load('pages/tutoring.html');
-        $(window).scrollTop(0);
+        goToPage('tutoring');
         toggleSideBarOnMobile();
     });
 
     $('#events').click(function() {
-        $('#page-content-wrapper').load('pages/events.html');
-        $(window).scrollTop(0);
+        goToPage('events');
         toggleSideBarOnMobile();
     });
 
     $('#executives').click(function() {
-        $('#page-content-wrapper').load('pages/executives.html');
-        $(window).scrollTop(0);
+        goToPage('executives');
         toggleSideBarOnMobile();
     });
 
     $('#resources').click(function() {
-        $('#page-content-wrapper').load('pages/resources.html');
-        $(window).scrollTop(0);
+        goToPage('resources');
         toggleSideBarOnMobile();
     });
 
     $('#scholarships').click(function() {
-        $('#page-content-wrapper').load('pages/scholarships.html');
-        $(window).scrollTop(0);
+        goToPage('scholarships');
         toggleSideBarOnMobile();
     });
 
     $('#contact-us').click(function() {
-        $('#page-content-wrapper').load('pages/contact-us.html');
-        $(window).scrollTop(0);
+        goToPage('contact-us');
         toggleSideBarOnMobile();
     });
 
     $('#sign-up').click(function() {
-        $('#page-content-wrapper').load('pages/sign-up.html');
-        $(window).scrollTop(0);
+        goToPage('sign-up');
         toggleSideBarOnMobile();
-
     });
 
     $('#contact-us-on').click(function() {
-        $('#page-content-wrapper').load('pages/contact-us-on.html');
-        $(window).scrollTop(0);
+        goToPage('contact-us-on');
         toggleSideBarOnMobile();
-
     });
 
     $('#blog').click(function() {
-        $('#page-content-wrapper').load('pages/blog.html');
-        $(window).scrollTop(0);
+        goToPage('blog');
         toggleSideBarOnMobile();
 
     });
