--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
 
     <script>
 
-    installPolyfills();
-
     // Open the sidebar on wide enough screens.
     // TODO: use a media query for this?
     $(document).ready(function(){
@@ -127,7 +125,7 @@
         var requestedPage = hash.slice('1');
 
         // this if else allows the URL's to specify what tab you want to see
-        if (pages.includes(requestedPage)) {
+        if (includes(pages, requestedPage)) {
             goToPage(requestedPage);
         } else {
             goToPage('home');
@@ -141,51 +139,15 @@
         $(window).scrollTop(0);
     }
 
-    // IE11 doesn't have Array#includes(), so add it here.
-    function installPolyfills() {
-        if ('includes' in Array.prototype) {
-            return;
+    // Same as Array.prototype.includes(), but defined here for browsers that
+    // don't support it (*cough* IE11 *cough cough*)
+    function includes(array, searchItem) {
+        for (var i = 0; i < array.length; i++) {
+            if (array[i] === searchItem) {
+                return true;
+            }
         }
-
-        Object.defineProperty(Array.prototype, 'includes', {
-            // Make sure the property is NON-ENUMERABLE, or else it will
-            // appear in for (var x in array) loops (because JavaScript)
-            enumerable: false,
-            value: includesPolyfill,
-        });
-
-        // Implemented (roughly) according to the standard:
-        // https://www.ecma-international.org/ecma-262/7.0/#sec-array.prototype.includes
-        function includesPolyfill(searchElement, fromIndex) {
-            // The ECMAScript standard chose bad variable names;
-            // I'm just being consistent :/
-            var k;
-            var len;
-            var n;
-
-            len = this.length;
-            if (len === 0) {
-                return false;
-            }
-
-            // ~~+ is a concise way to coerce things into integers.
-            n = ~~+fromIndex || 0;
-            if (n >= 0) {
-                k = n;
-            } else {
-                k = len + n;
-                if (k < 0) {
-                    k = 0;
-                }
-            }
-
-            for (/* 👆👀 */; k < len; k++) {
-                if (this[k] === searchElement) {
-                    return true;
-                }
-            }
-            return false;
-        }
+        return false;
     }
     </script>
 
