Add more websites to resources per issue #20
Add UASUCares, SU awards, and student aid scholarship links to
resources and scholarship page tabs respectively.
If merged, closes issue #20.

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -24,6 +24,8 @@
         <li class="ada-list-item"><a href="http://www.ssds.ualberta.ca/en.aspx">Student Accessibility Services</a> – Access to your success</li>
         <li class="ada-list-item"><a href="http://www.slsedmonton.com/">Student Legal Services</a> – Providing free legal information and representation to the low income community since 1969</li>
         <li class="ada-list-item"><a href="http://www.studentsuccess.ualberta.ca/">Student Success Centre</a> – Maximize your success at the University of Alberta</li>
+        <li class="ada-list-item"><a href="https://www.su.ualberta.ca/services/awards/">Student's Union Awards</a> – Recognize students who make outstanding contributions to the campus community</li>
+        <li class="ada-list-item"><a href="http://uasucares.su.ualberta.ca/en/">UASU Cares</a> – A wellness resource that connects students to mental, safety, physical, and basic needs services</li>
         <li class="ada-list-item"><a href="http://www.uri.ualberta.ca/">Undergraduate Research Initiative</a> – Supports the involvement of University of Alberta undergraduate students in research activities.</li>
     </ul>
     <h5 class="ada-paragraph resources">Articles</h5>
