--- a/pages/scholarships.html
+++ b/pages/scholarships.html
@@ -3,6 +3,7 @@
 
     <h5 class="ada-paragraph">Undergraduate scholarships</h5>
     <ul>
+        <li class="ada-list-item"><a href="https://studentaid.alberta.ca/scholarships/alberta-scholarships/">Alberta Student Aid Scholarships</a> - Scholarships given by Alberta Student Aid, Government of Alberta.</li>
         <li class="ada-list-item"><a href="http://www.awsn.org/scholarship-application">AWSN Scholarship</a> - ( Alberta Women’s Science Network ) – Are you a female student who is continuing full time undergraduate studies entering your third or fourth year of an undergraduate program in Science, Technology, Engineering or Mathematics at an Alberta university, college, or technical institute? Have you demonstrated leadership?</li>
         <li class="ada-list-item"><a href="http://www.humanservices.alberta.ca/family-community/15596.html">Persons Case Scholarship</a> – The Alberta Persons Case Scholarship was established in 1979 to commemorate the 50th anniversary of the “Persons Case”. These scholarships honour the efforts of five Alberta women who fought and won the right for the women of Canada to be officially deemed “persons” under the law.</li>
         <li class="ada-list-item"><a href="http://www.greenandgoldgrant.ualberta.ca/">Green &amp; Gold Grant</a> – Student leadership &amp; professional development.</li>
