--- a/pages/executives.html
+++ b/pages/executives.html
@@ -27,7 +27,7 @@
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph bold">VP Outreach External:</td>
-                <td class="ada-paragraph">Ashley Holgate</td>
+                <td class="ada-paragraph">Vacant</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph bold">VP Outreach Internal:</td>
