changing the description to something a little more interesting

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Ada's Team Website">
+    <meta name="description" content="Our goal is to promote diversity in computing science, games, technology, engineering, and mathematics. By diversity, we include the following categories: gender, race, ethnicity, religion, ability, sexuality, allies, social class and any other factor of discrimination or minority group.">
     <meta name="author" content="Ada's Team">
     <!--favicon-->
 	<link rel="icon" href="/img/head-square.png">
