fixing the meta tags so that our snippets that google shows are better hopefully

--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Our goal is to promote diversity in computing science, games, technology, engineering, and mathematics. By diversity, we include the following categories: gender, race, ethnicity, religion, ability, sexuality, allies, social class and any other factor of discrimination or minority group.">
     <meta name="author" content="Ada's Team">
+
+    <!-- YES WE NEED ALL THESE STUPID META TAGS TO GET GOOGLE TO DISPLAY THINGS CORRECTLY generated with https://megatags.co/ -->
+    <meta charset="utf-8">
+    <title>Ada's Team</title>
+    <!-- Search Engine -->
+    <meta name="description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta name="image" content="https://adas-team.github.io/img/banner.PNG">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Ada's Team">
+    <meta itemprop="description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta itemprop="image" content="https://adas-team.github.io/img/banner.PNG">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Ada's Team">
+    <meta name="twitter:description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta name="twitter:site" content="@Adas_Team">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Ada's Team">
+    <meta name="og:description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta name="og:image" content="https://adas-team.github.io/img/banner.PNG">
+    <meta name="og:url" content="https://adas-team.github.io/">
+    <meta name="og:site_name" content="Ada's Team">
+    <meta name="og:locale" content="en">
+    <meta name="og:type" content="website">
+    <meta name="nosnippet"> 
+
+
+
+
+
     <!--favicon-->
 	<link rel="icon" href="/img/head-square.png">
 
