Rex wants to change her name Feb 26th 4:46pm

--- a/pages/executives.html
+++ b/pages/executives.html
@@ -19,7 +19,7 @@
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph bold">VP Events:</td>
-                <td class="ada-paragraph">Rex Xiang</td>
+                <td class="ada-paragraph">Xinyue Xiang</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph bold">VP Promotions:</td>
