--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Our goal is to promote diversity in computing science, games, technology, engineering, and mathematics. By diversity, we include the following categories: gender, race, ethnicity, religion, ability, sexuality, allies, social class and any other factor of discrimination or minority group.">
     <meta name="author" content="Ada's Team">
 
+    <meta name="google-site-verification" content="vqBehCAIlFcm-oP1QWiwX5FcKARObQrzSyPkFndhWRA" />
+
     <!-- YES WE NEED ALL THESE STUPID META TAGS TO GET GOOGLE TO DISPLAY THINGS CORRECTLY generated with https://megatags.co/ -->
     <meta charset="utf-8">
     <title>Ada's Team</title>
@@ -31,7 +33,7 @@
     <meta name="og:site_name" content="Ada's Team">
     <meta name="og:locale" content="en">
     <meta name="og:type" content="website">
-    <meta name="nosnippet"> 
+    <meta name="nosnippet">
 
 
 
