lolcan't use docs?

--- a/pages/home.html
+++ b/pages/home.html
@@ -41,7 +41,7 @@
     <h5 class="ada-paragraph ada-faq">How do I become a member of Ada's Team?</h5>
     <p class="ada-paragraph">A member is anyone who has attended an event in the last year and is on our mailing list.
         Events can be anything from chilling in the room, to coming to a conference and even just volunteering at an event with us.
-        Members also have to follow our Code of Conduct <a href="/documents/CodeOfConduct.pdf">here</a>
+        Members also have to follow our Code of Conduct <a href="/conduct/CodeOfConduct.pdf">here</a>
     </p>
     <h5 class="ada-paragraph ada-faq">What can I do to help/volunteer with Ada’s Team?</h5>
     <p class="ada-paragraph">We always need volunteers for fun events/tutoring.
