adding more exec descriptions, getting rid of the weird meta tags, making the table look better

--- a/pages/executives.html
+++ b/pages/executives.html
@@ -2,52 +2,89 @@
     <h1 class="ada-title">Ada’s Team Executive Committee</h1>
     <br/>
     <p class="ada-paragraph">The Ada’s Team executive committee is elected every April.
+        There are some descriptions of the positions below but for the
+        actual responsibilities please see our constitution <a href="https://alberta.campuslabs.ca/engage/organization/adasteam">here</a>.
         The following are the committee members for the 2018-19 academic year:</p>
         <br/>
         <table>
+            <col width="66%">
+            <col width="33%">
             <tr class="ada-row">
-                <td class="ada-paragraph bold">President:</td>
-                <td class="ada-paragraph">Mandy Meindersma</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">President:</p> <br/>
+                  <p class="ada-paragraph">Responsible for managing the general executive and planning meetings</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Mandy Meindersma</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Admin:</td>
-                <td class="ada-paragraph">Chelsea Hong</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Admin: </p> <br/>
+                  <p class="ada-paragraph">Responsible for tutoring and room sitting hours as well as member attendance</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Chelsea Hong</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Finance:</td>
-                <td class="ada-paragraph">Bennett Hreherchuck</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Finance:</p> <br/>
+                  <p class="ada-paragraph">Responsible for any finances that are not related to conference</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Bennett Hreherchuck</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Events:</td>
-                <td class="ada-paragraph">Xinyue Xiang</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Events:</p> <br/>
+                  <p class="ada-paragraph">Responsible for planning Autumn Feast, Clubs Fair and Coffee && Code events as well as bearsden submissions</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Xinyue Xiang</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Promotions:</td>
-                <td class="ada-paragraph">Diane Boytang</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Promotions:</p> <br/>
+                  <p class="ada-paragraph">Responsible for our social media, posters and this beautiful website</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Diane Boytang</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Outreach External:</td>
-                <td class="ada-paragraph">Vacant</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Outreach External:</p> <br/>
+                  <p class="ada-paragraph">Responsible for working with WISEST to do a variety of kids outreach and network with other companies</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Vacant</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Outreach Internal:</td>
-                <td class="ada-paragraph">Owen Mcleod</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Outreach Internal:</p> <br/>
+                  <p class="ada-paragraph">Responsible for planning events with other students groups and organizing a diversity panel</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Owen Mcleod</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Conference External:</td>
-                <td class="ada-paragraph">Helen Gezahegn</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Conference External:</p> <br/>
+                  <p class="ada-paragraph">Responsible for planning flight and hotel in relation to conferences we go to</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Helen Gezahegn</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Conference Internal:</td>
-                <td class="ada-paragraph">Katherine Mae Patenio</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Conference Internal:</p> <br/>
+                  <p class="ada-paragraph">Responsible for planning speeches and research posters at the conference we go to and preparing conference goers that we send</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Katherine Mae Patenio</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">VP Conference Finance:</td>
-                <td class="ada-paragraph">Amy Xiang</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">VP Conference Finance:</p> <br/>
+                  <p class="ada-paragraph">Responsible for making a budget for the conference and allocating money to attendees</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Amy Xiang</td>
             </tr>
             <tr class="ada-row">
-                <td class="ada-paragraph bold">Mascot:</td>
-                <td class="ada-paragraph">Ada Bot</td>
+                <td class="ada-paragraph">
+                  <p class="ada-paragraph bold">Mascot:</p> <br/>
+                  <p class="ada-paragraph">Responsible for being adorable and lifting our spirits during midterms</p>
+                </td>
+                <td class="ada-paragraph bottom-table">Ada Bot</td>
             </tr>
 
 </div>
