--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
     <meta name="og:type" content="website">
     <meta name="nosnippet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136317746-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-136317746-1');
+    </script>
 
 
 
