--- a/pages/home.html
+++ b/pages/home.html
@@ -31,6 +31,8 @@
         science to those in high school. We try to go to a couple empowering conferences
         throughout the year. We hold a ton of small studying events as well where students
         have a safe space to meet others and have the opportunity to be themselves.
+        Checkout this info-graphic about everything we did in 2018-2019:
+        <a href="/img/2018-2019-infographic.pdf">Click me! </a>
     </p>
     <h5 class="ada-paragraph ada-faq">How do I get more involved with Ada’s Team?</h5>
     <p class="ada-paragraph">Great question! Join our mailing list first! This is on the sign up tab.
