changing meta tags once again

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <meta charset="utf-8">
     <title>Ada's Team</title>
     <!-- Search Engine -->
-    <meta name="description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta name="description" content="Ada's Team is a student group at the University of Alberta, promoting diversity in computing science, games, technology, engineering, and mathematics.">
     <meta name="image" content="https://adas-team.github.io/img/banner.PNG">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Ada's Team">
-    <meta itemprop="description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta itemprop="description" content="Ada's Team is a student group at the University of Alberta, promoting diversity in computing science, games, technology, engineering, and mathematics.">
     <meta itemprop="image" content="https://adas-team.github.io/img/banner.PNG">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Ada's Team">
-    <meta name="twitter:description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta name="twitter:description" content="Ada's Team is a student group at the University of Alberta, promoting diversity in computing science, games, technology, engineering, and mathematics.">
     <meta name="twitter:site" content="@Adas_Team">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Ada's Team">
-    <meta name="og:description" content="Ada's Team is a student group at the University of Alberta, promote diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta name="og:description" content="Ada's Team is a student group at the University of Alberta, promoting diversity in computing science, games, technology, engineering, and mathematics.">
     <meta name="og:image" content="https://adas-team.github.io/img/banner.PNG">
     <meta name="og:url" content="https://adas-team.github.io/">
     <meta name="og:site_name" content="Ada's Team">
