updated the executive members in Ada's team

--- a/pages/executives.html
+++ b/pages/executives.html
@@ -14,49 +14,49 @@
                   <p class="ada-paragraph bold">President:</p> <br/>
                   <p class="ada-paragraph">Responsible for managing the general executive and planning meetings</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Mandy Meindersma</td>
+                <td class="ada-paragraph bottom-table">Chelsea Hong</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
                   <p class="ada-paragraph bold">VP Admin: </p> <br/>
                   <p class="ada-paragraph">Responsible for tutoring and room sitting hours as well as member attendance</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Chelsea Hong</td>
+                <td class="ada-paragraph bottom-table">Lidia Ataupillco Ramos</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
                   <p class="ada-paragraph bold">VP Finance:</p> <br/>
                   <p class="ada-paragraph">Responsible for any finances that are not related to conference</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Bennett Hreherchuck</td>
+                <td class="ada-paragraph bottom-table">Aysha Araien</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
                   <p class="ada-paragraph bold">VP Events:</p> <br/>
                   <p class="ada-paragraph">Responsible for planning Autumn Feast, Clubs Fair and Coffee && Code events as well as bearsden submissions</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Xinyue Xiang</td>
+                <td class="ada-paragraph bottom-table">Vacant</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
                   <p class="ada-paragraph bold">VP Promotions:</p> <br/>
                   <p class="ada-paragraph">Responsible for our social media, posters and this beautiful website</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Diane Boytang</td>
+                <td class="ada-paragraph bottom-table">JuSong Baek</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
                   <p class="ada-paragraph bold">VP Outreach External:</p> <br/>
                   <p class="ada-paragraph">Responsible for working with WISEST to do a variety of kids outreach and network with other companies</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Vacant</td>
+                <td class="ada-paragraph bottom-table">Eisha Ahmed</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
                   <p class="ada-paragraph bold">VP Outreach Internal:</p> <br/>
                   <p class="ada-paragraph">Responsible for planning events with other students groups and organizing a diversity panel</p>
                 </td>
-                <td class="ada-paragraph bottom-table">Owen Mcleod</td>
+                <td class="ada-paragraph bottom-table">Rex Xiang</td>
             </tr>
             <tr class="ada-row">
                 <td class="ada-paragraph">
