--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -46,10 +46,11 @@
             <a href="mailto:adasteam@ualberta.ca">adasteam@ualberta.ca</a>
         </span>
     </p>
+    <p class="ada-paragraph">When you're done with a tutoring session, please <a href="https://forms.gle/6dNE9KmdikAvVyTL7">fill out the tutoring feedback form</a>! </p>
+
     <p class="ada-paragraph left space width-100">Volunteer tutoring hours are shown below in
         <span class="ada-paragrph ada-pink">pink.</span>
     </p>
-
 
     <iframe class="ada-big-calendar extra-space" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0;" width="640" height="600" frameborder="0" scrolling="no"></iframe>
     <iframe class="ada-small-calendar extra-space" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0" width="300" height="600" frameborder="0" scrolling="no"></iframe>
