#25 adding linkedin and twitter links for adas

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -25,6 +25,16 @@
     </a>
 </div>
 <div class="ada-link-wrapper right">
+    <a href="https://www.linkedin.com/company/adas-team/" class="ada-link-wrapper">
+        <img src="img/linkedin.png" class="ada-link">
+    </a>
+</div>
+<div class="ada-link-wrapper right drop-shadow">
+    <a href="https://twitter.com/adas_team?lang=en" class="ada-link-wrapper">
+        <img src="img/twitter.png" class="ada-link">
+    </a>
+</div>
+<div class="ada-link-wrapper right">
     <a href="mailto:adasteam@ualberta.ca" class="ada-link-wrapper">
         <img src="img/email.png" class="ada-link">
     </a>
