fixes #58 - adding fem lab link

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -27,6 +27,8 @@
         <li class="ada-list-item"><a href="https://www.su.ualberta.ca/services/awards/">Student's Union Awards</a> – Recognize students who make outstanding contributions to the campus community</li>
         <li class="ada-list-item"><a href="http://uasucares.su.ualberta.ca/en/">UASU Cares</a> – A wellness resource that connects students to mental, safety, physical, and basic needs services</li>
         <li class="ada-list-item"><a href="http://www.uri.ualberta.ca/">Undergraduate Research Initiative</a> – Supports the involvement of University of Alberta undergraduate students in research activities.</li>
+        <li class="ada-list-item"><a href="https://www.ualberta.ca/womens-gender-studies/femlab">Femlab</a> – Femlab is a creative laboratory for feminist practice at the University of Alberta, featuring artistic works composed by Women’s and Gender Studies undergrads, MFA students and graduates, and feminist artists across the University and our wider community. </li>
+
     </ul>
     <h5 class="ada-paragraph resources">Articles</h5>
     <ul>
