feat: include PLLC to resources - add website and description

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -18,7 +18,8 @@
         <li class="ada-list-item"><a href="http://www.disclosure.ualberta.ca/en/Helping_Individuals_at_Risk.aspx">Helping Individuals at Risk</a> – Trust your instincts. Recognize and report worrying behavior.</li>
         <li class="ada-list-item"><a href="http://www.iss.ualberta.ca/">International Student Services</a> – Provides events and programming to help international students accomplish their academic and personal goals</li>
         <li class="ada-list-item"><a href="http://www.ombudservice.ualberta.ca/">Office of the Student Ombuds</a> – A confidential service that strives to ensure that university processes related to students operate as fairly as possible.</li>
-        <li class="ada-list-item"><a href="http://su.ualberta.ca/services/psc/">Peer Support Centre</a> – We’re here to listen</li>
+        <li class="ada-list-item"><a href="http://su.ualberta.ca/services/psc/">Peer Support Centre</a> – We’re here to listen.</li>
+        <li class="ada-list-item"><a href="https://www.ualberta.ca/lougheed-leadership-college/index.html/">Peter Lougheed Leadership College</a> – Catalyzes inclusive leadership development through critical reflection, experiential learning, interdisciplinary collaboration and community engagement.</li>
         <li class="ada-list-item"><a href="http://su.ualberta.ca/services/safewalk/">Safewalk</a> – A free accompaniment service for anyone traveling on or around campus at night</li>
         <li class="ada-list-item"><a href="https://uofa.ualberta.ca/current-students/sexual-assault-centre">Sexual Assault Centre</a> – Striving for a campus free of sexual violence</li>
         <li class="ada-list-item"><a href="http://www.ssds.ualberta.ca/en.aspx">Student Accessibility Services</a> – Access to your success</li>
